--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,16 +2,5 @@
 <%= @task.content %>
 </h1>
 
-<%= form_with(model: @task, local: true) do |f| %>
-
-<%= f.label :content, 'タスク編集' %>
-
-<%= f.text_field :content %>
-
-
-<%= f.submit '投稿' %>
-
-<% end %>
-
-
+<%= render 'form',task = @task %>
 <%= link_to 'タスク一覧', tasks_path %>
