--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -2,5 +2,5 @@
 <%= @task.content %>
 </h1>
 
-<%= render 'form',task = @task %>
+<%= render 'form', task: @task %>
 <%= link_to 'タスク一覧', tasks_path %>
