--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,7 +9,13 @@
     <!-- メニュー項目 -->
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
+        <% if logged_in? %>
         <li class="nav-item"><%= link_to  'タスクを追加', new_task_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to  'Log out', logout_path, method: :delete, class: 'nav-link' %></li>
+        <% else %>
+        <li class="nav-item"><%= link_to  'Sign up', signup_path, class: 'nav-link' %></li>
+        <li class="nav-item"><%= link_to  'Log in', login_path, class: 'nav-link' %></li>
+        <% end %>
       </ul>
     </div>
   </nav>
