--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,5 +1,5 @@
 
-<h1 style="text-align:center;">Task List</h1>
+<h1 style="text-align:center;"><%= current_user.name %>'s tasks</h1>
 <center>
 <div class="taskcontainer" style="width:400px;border: 5px solid red;">
 <ul>
